# SHA-implementation

./: .cirrus.yml  README.md
.github/workflows/: compilation.yaml  doxygen-action.yaml  pdf-latex.yaml
latex/: .gitignore  README.md  build.sh  formatting.sh  main.bak1  main.tex
latex/sections/: 1-introduzione.bak1  1-introduzione.tex  2-attacchi.bak1  2-attacchi.tex  3-appendici.bak1  3-appendici.tex  3-utilizzi.tex
src/: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  clean.sh  compile.sh  conanfile.txt  documentation.sh  formatting.sh  hash.py  main.cc  profile.sh  run_all_ut.sh  sha_cli.cc  ut_sha_functions.cc
src/.github/workflows/: compilation.yaml
src/lib-hash/: CMakeLists.txt  hash.cc  sha0.cc  sha1.cc
src/lib-hash/headers/: common_hash.hh  hash.hh  sha0.hh  sha1.hh
src/lib-hash/src/: sha0.cc  sha1.cc
src/lib-log/: CMakeLists.txt  logging.cc
src/lib-log/headers/: logging.hh
